fixed some styling and light/dark mode issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,7 +17,7 @@ body.dark-mode {
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   position: relative;
   min-height: 100vh;
 }
