--- a/frontend/src/CreateBoard.css
+++ b/frontend/src/CreateBoard.css
@@ -37,9 +37,9 @@
 }
 
 .modal-close {
-    position: absolute;
-    top: 1vh;
-    right: 1vh;
+  position: absolute;
+  top: 1vh;
+  right: 1vh;
   color: #aaa;
   float: right;
   font-size: 3vh;
@@ -65,6 +65,23 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+}
+
+.create-card-form button {
+  align-self: center;
+  width: 100%;
+}
+
+#create-card-modal .modal-close{
+  font-size: 5vh;
+  right: -6vw;
+}
+
+.gif-pics {
+  object-fit: cover;
+  width: 15vw;
+  max-height: 40vh;
+  aspect-ratio: 1/1;
 }
 
 .create-card-form button {
